Fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@ body,
 html {
   margin: 0;
   font-family: 'Roboto';
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 
